<resources>
    <string name="app_name">Cartoons</string>
    <string name="app_settings">Settings</string>
    <string name="cartoons_filter">Filter</string>
    <string name="filter_author">Studio</string>
    <string name="filter_duration">Maximum Duration</string>
    <string name="filter_minutes">Minutes</string>
    <string name="filter_hours">Hours</string>
    <string name="settings_language">Language</string>
    <string name="settings_en">English</string>
    <string name="settings_by">Belarusian</string>
    <string name="cartoonsview_rating">Rating</string>
    <string name="cartoonsview_duration">Duration</string>
    <string name="video_not_available">Video is not available.</string>
    <string name="video_error_caption">Error</string>
    <string name="settings_font_size">Font size</string>
    <string name="settings_fontsize_small">Small</string>
    <string name="settings_fontsize_medium">Medium</string>
    <string name="settings_fontsize_large">Large</string>
    <string name="settings_font">Font</string>
    <string name="name">Name</string>
    <string name="author">Author</string>
    <string name="duration_minutes">Duration, minutes</string>
    <string name="duration_hours">Duration, hours</string>
    <string name="upload_image">Upload an image</string>
    <string name="upload_video">Upload a video</string>
    <string name="add_cartoon">Add cartoon</string>
</resources>
