<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".filter_activity">

    <EditText
        android:id="@+id/studio_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/filter_author"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097" />

    <TextView
        android:id="@+id/duration_label"
        android:layout_width="224dp"
        android:layout_height="59dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="504dp"
        android:gravity="center"
        android:text="@string/filter_duration"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studio_text"
        app:layout_constraintVertical_bias="0.078" />

    <EditText
        android:id="@+id/filter_hours"
        android:layout_width="127dp"
        android:layout_height="46dp"
        android:layout_marginStart="56dp"
        android:ems="10"
        android:hint="@string/filter_hours"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367" />

    <EditText
        android:id="@+id/filter_minutes"
        android:layout_width="132dp"
        android:layout_height="44dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:hint="@string/filter_minutes"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:onClick="onFilter"
        android:text="@string/cartoons_filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_hours"
        app:layout_constraintVertical_bias="0.855" />

</androidx.constraintlayout.widget.ConstraintLayout>